Fix card header text causing grid item overflow

--- a/src/main/resources/META-INF/resources/css/main.css
+++ b/src/main/resources/META-INF/resources/css/main.css
@@ -236,11 +236,11 @@ button.primary {
 .card-header h4,
 .card-header h5,
 .card-header h6 {
-  height: 1.5rem;
   margin: 0;
   font-weight: bold;
   overflow: hidden;
-  word-break: break-word;
+  white-space: nowrap;
+  text-overflow: ellipsis;
 }
 
 /* Card grid */
@@ -498,6 +498,11 @@ section#topical {
 }
 .bg-bad {
   background: var(--color-bad);
+}
+
+/* This is a hack that prevents grid items from overflowing when they contain text with "white-space: nowrap" */
+.min-width-0 {
+  min-width: 0;
 }
 
 /* Responsiveness */
